Fixed menu button alignments.

--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,10 @@
 .buttons {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
